--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 .idea/
 MongoDBBackup
 .vagrant/
+node_modules
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
